feat(ranking): add ranking feature - Change info service to support paging feature